--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -219,6 +219,7 @@
 <!ENTITY Ctr_hideprbutton	"Nezobrazovat upozornění při blokování vyskakovacích oken">
 <!ENTITY Ctr_urlbar_ib		"Tlačítko identity webu (identity box)">
 <!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
+<!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
 <!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
 <!ENTITY Ctr_faviconurl		"Favicona">
 <!ENTITY Ctr_padlock		"Zámek">
@@ -226,7 +227,7 @@
 <!ENTITY Ctr_padlock_def	"výchozí">
 <!ENTITY Ctr_padlock_cla	"klasický">
 <!ENTITY Ctr_padlock_mod	"moderní">
-<!ENTITY Ctr_padlock_ext	"Ikony bezpečnosti">
+<!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid chrome pages">
 <!ENTITY Ctr_icopageinfo	"Klik na ikonu otevře okno 'informace o stránce'">
 
 <!ENTITY Ctr_menubar_items	"Umístění menu">
