--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -219,6 +219,7 @@
 <!ENTITY Ctr_hideprbutton	"Skjul notifikationsikonet når en popup blokeres">
 <!ENTITY Ctr_urlbar_ib		"Knappen Identitet for websted (Identitet boks)">
 <!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
+<!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
 <!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
 <!ENTITY Ctr_faviconurl		"Favicon: aktuelt webstedsikon">
 <!ENTITY Ctr_padlock		"Hængelås ikon til sikre forbindelser">
@@ -226,7 +227,7 @@
 <!ENTITY Ctr_padlock_def	"standard">
 <!ENTITY Ctr_padlock_cla	"klassik">
 <!ENTITY Ctr_padlock_mod	"moderne">
-<!ENTITY Ctr_padlock_ext	"Sikkerhedsikoner">
+<!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid 'about' pages">
 <!ENTITY Ctr_icopageinfo	"Klik på ikon åbner vinduet 'Sideoplysninger'">
 
 <!ENTITY Ctr_menubar_items	"Placering af menupunkter">
