--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -219,6 +219,7 @@
 <!ENTITY Ctr_hideprbutton	"Verstecke 'Infosymbol' (wenn ein Popup-Fenster blockiert wurde)">
 <!ENTITY Ctr_urlbar_ib		"Schaltfläche zur Webseitenidentität">
 <!ENTITY Ctr_ib_nohovcolor	"Graue Farbe beim 'Hovern' nicht anzeigen">
+<!ENTITY Ctr_ib_graycolor	"Graue Farbe für 'Chrome' Seiten und Seiten mit unbekannter Identität">
 <!ENTITY Ctr_verifiedcolors	"Farbig bei verifizierten Webseiten, sicheren und unsicheren Verbindungen">
 <!ENTITY Ctr_faviconurl		"Lesezeichensymbol (Favicon) der Webseite">
 <!ENTITY Ctr_padlock		"Schloss-Symbol bei sicheren Verbindungen">
@@ -226,7 +227,7 @@
 <!ENTITY Ctr_padlock_def	"unverändert">
 <!ENTITY Ctr_padlock_cla	"klassisch">
 <!ENTITY Ctr_padlock_mod	"modern">
-<!ENTITY Ctr_padlock_ext	"Sicherheitssymbole">
+<!ENTITY Ctr_padlock_ext	"'&brandShortName;' Symbol für gültige 'about' Seiten">
 <!ENTITY Ctr_icopageinfo	"Ein Klick auf das Symbol öffnet das 'Seiteninfo'-Fenster">
 
 <!ENTITY Ctr_menubar_items	"Position der Menüeinträge">
