--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -219,6 +219,7 @@
 <!ENTITY Ctr_hideprbutton	"Hide notification icon when a popup gets blocked">
 <!ENTITY Ctr_urlbar_ib		"Site Identity Button (identity box)">
 <!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
+<!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
 <!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
 <!ENTITY Ctr_faviconurl		"Favicon: current websites icon">
 <!ENTITY Ctr_padlock		"Padlock icon for secure connections">
@@ -226,7 +227,7 @@
 <!ENTITY Ctr_padlock_def	"default">
 <!ENTITY Ctr_padlock_cla	"classic">
 <!ENTITY Ctr_padlock_mod	"modern">
-<!ENTITY Ctr_padlock_ext	"Security icons">
+<!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid 'about' pages">
 <!ENTITY Ctr_icopageinfo	"Clicking on icon opens 'page info' window">
 
 <!ENTITY Ctr_menubar_items	"Menu items position">
