--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -219,6 +219,7 @@
 <!ENTITY Ctr_hideprbutton	"Peida blokeeritud hüpikakende teavitusikoon">
 <!ENTITY Ctr_urlbar_ib		"Saidi identiteedi nupp (identiteedi kast)">
 <!ENTITY Ctr_ib_nohovcolor	"Hiirekursoriga ikooni peale minnes ära näita halli taustavärvi">
+<!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
 <!ENTITY Ctr_verifiedcolors	"Verifitseeritud veebisaitide ning turvaliste ja ebaturvaliste ühenduste nupuvärvid">
 <!ENTITY Ctr_faviconurl		"Lehe ikoon: aktiivse veebisaidi ikoon">
 <!ENTITY Ctr_padlock		"Tabaluku ikoon turvaliste ühenduste jaoks">
@@ -226,7 +227,7 @@
 <!ENTITY Ctr_padlock_def	"vaikimisi">
 <!ENTITY Ctr_padlock_cla	"klassikaline">
 <!ENTITY Ctr_padlock_mod	"kaasaegne">
-<!ENTITY Ctr_padlock_ext	"Turvalisuse ikoonid">
+<!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid 'about' pages">
 <!ENTITY Ctr_icopageinfo	"Ikoonil klõpsamine avab akna 'veebilehe teave'">
 
 <!ENTITY Ctr_menubar_items	"Menüükirjete asukoht">
