--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -219,6 +219,7 @@
 <!ENTITY Ctr_hideprbutton	"Masquer l'icône de notification quand un pop-up est bloqué">
 <!ENTITY Ctr_urlbar_ib		"Bouton d'identité">
 <!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
+<!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
 <!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
 <!ENTITY Ctr_faviconurl		"Afficher le favicon dans la barre d'adresse">
 <!ENTITY Ctr_padlock		"Cadenas">
@@ -226,7 +227,7 @@
 <!ENTITY Ctr_padlock_def	"par défaut">
 <!ENTITY Ctr_padlock_cla	"classique">
 <!ENTITY Ctr_padlock_mod	"moderne">
-<!ENTITY Ctr_padlock_ext	"Icônes de sécurité">
+<!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid 'about' pages">
 <!ENTITY Ctr_icopageinfo	"Un clic sur l'icône ouvre la 'page info'">
 
 <!ENTITY Ctr_menubar_items	"Position de la barre de menus">
