--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -219,6 +219,7 @@
 <!ENTITY Ctr_hideprbutton	"Zdźělenski symbol schować, hdyž so wuskakowace wokno blokuje">
 <!ENTITY Ctr_urlbar_ib		"Tłóčatko sydłoweje identity">
 <!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
+<!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
 <!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
 <!ENTITY Ctr_faviconurl		"Faworitowy symbol">
 <!ENTITY Ctr_padlock		"Zamkowy symbol za wěste zwiski">
@@ -226,7 +227,7 @@
 <!ENTITY Ctr_padlock_def	"standard">
 <!ENTITY Ctr_padlock_cla	"klasiski">
 <!ENTITY Ctr_padlock_mod	"moderny">
-<!ENTITY Ctr_padlock_ext	"Wěstotne symbole">
+<!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid 'about' pages">
 <!ENTITY Ctr_icopageinfo	"Kliknjenje na symbol wočinja wokno 'Info wo stronje'">
 
 <!ENTITY Ctr_menubar_items	"Pozicija menijowych zapiskow">
