--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -219,6 +219,7 @@
 <!ENTITY Ctr_hideprbutton	"Ocultar o Ícone de Notificação Quando um Pop-up Ficar Bloqueado">
 <!ENTITY Ctr_urlbar_ib		"Botão de Identidade do Site (Caixa de Identidade)">
 <!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
+<!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
 <!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
 <!ENTITY Ctr_faviconurl		"Favicon">
 <!ENTITY Ctr_padlock		"Cadeado">
@@ -226,7 +227,7 @@
 <!ENTITY Ctr_padlock_def	"Padrão">
 <!ENTITY Ctr_padlock_cla	"Clássico">
 <!ENTITY Ctr_padlock_mod	"Moderno">
-<!ENTITY Ctr_padlock_ext	"Ícones de Segurança">
+<!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid 'about' pages">
 <!ENTITY Ctr_icopageinfo	"Clicar no Ícone Abre a Janela 'Infs. da Página'">
 
 <!ENTITY Ctr_menubar_items	"Posição dos Ítens do Menu">
