--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -219,6 +219,7 @@
 <!ENTITY Ctr_hideprbutton	"Приховати інфо кнопку «спливаюче вікно блоковано»">
 <!ENTITY Ctr_urlbar_ib		"Індикатори справжності панелі рядку адреси">
 <!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
+<!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
 <!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
 <!ENTITY Ctr_faviconurl		"Значок сайту">
 <!ENTITY Ctr_padlock		"Замок">
@@ -226,7 +227,7 @@
 <!ENTITY Ctr_padlock_def	"типово">
 <!ENTITY Ctr_padlock_cla	"класичний">
 <!ENTITY Ctr_padlock_mod	"сучасний">
-<!ENTITY Ctr_padlock_ext	"Іконки безпеки">
+<!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid 'about' pages">
 <!ENTITY Ctr_icopageinfo	"Клік на іконку відкриває інформаційне вікно">
 
 <!ENTITY Ctr_menubar_items	"Позиція пунктів меню">
