--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -219,6 +219,7 @@
 <!ENTITY Ctr_hideprbutton	"當彈出型廣告視窗被封鎖時，不顯示通知圖示">
 <!ENTITY Ctr_urlbar_ib		"網站識別鈕 (身份區塊)">
 <!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
+<!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
 <!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
 <!ENTITY Ctr_faviconurl		"網址列顯示網站圖示">
 <!ENTITY Ctr_padlock		"鎖頭">
@@ -226,7 +227,7 @@
 <!ENTITY Ctr_padlock_def	"預設">
 <!ENTITY Ctr_padlock_cla	"經典風格">
 <!ENTITY Ctr_padlock_mod	"現代風格">
-<!ENTITY Ctr_padlock_ext	"安全圖示">
+<!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid 'about' pages">
 <!ENTITY Ctr_icopageinfo	"按下圖示，則開啟「頁面資訊」視窗">
 
 <!ENTITY Ctr_menubar_items	"選單列併入">
