--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -219,6 +219,7 @@
 <!ENTITY Ctr_hideprbutton	"Zdźěleński symbol schowaś, gaž wuskokujuce wokno se blokěrujo">
 <!ENTITY Ctr_urlbar_ib		"Tłocašk sedłoweje identity">
 <!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
+<!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
 <!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
 <!ENTITY Ctr_faviconurl		"Faworitowy symbol">
 <!ENTITY Ctr_padlock		"Pytkowy symbol za wěste zwiski">
@@ -226,7 +227,7 @@
 <!ENTITY Ctr_padlock_def	"standard">
 <!ENTITY Ctr_padlock_cla	"klasiski">
 <!ENTITY Ctr_padlock_mod	"moderny">
-<!ENTITY Ctr_padlock_ext	"Wěstotne symbole">
+<!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid 'about' pages">
 <!ENTITY Ctr_icopageinfo	"Kliknjenje na symbol wócynja wokno 'Info wó boku">
 
 <!ENTITY Ctr_menubar_items	"Pozicija menijowych zapiskow">
