--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -219,6 +219,7 @@
 <!ENTITY Ctr_hideprbutton	"Popup engellendiğinde beliren uyarıyı gizle">
 <!ENTITY Ctr_urlbar_ib		"Site Kimlik Düğmesi (kimlik kutusu)">
 <!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
+<!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
 <!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
 <!ENTITY Ctr_faviconurl		"Favicon: Mevcut web siteleri simgesidir">
 <!ENTITY Ctr_padlock		"Güvenli bağlantılar için asma kilit simgesi">
@@ -226,7 +227,7 @@
 <!ENTITY Ctr_padlock_def	"varsayılan">
 <!ENTITY Ctr_padlock_cla	"klasik">
 <!ENTITY Ctr_padlock_mod	"modern">
-<!ENTITY Ctr_padlock_ext	"Güvenlik ikonları">
+<!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid 'about' pages">
 <!ENTITY Ctr_icopageinfo	"İkonlara tıklamak 'sayfa bilgisi' görüntüler">
 
 <!ENTITY Ctr_menubar_items	"Menu öge pozisyonu">
