--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -115,13 +115,13 @@
 <!ENTITY Ctr_bf_space		"Зменшити відстань між кнопками (якщо це можливо)">
 <!ENTITY Ctr_noconicons		"Замінити іконки контекстного меню сторінки написами (назад, вперед, стоп, перезавантажити, сторінка закладок)">
 <!ENTITY Ctr_prefpage		"Сторінка Налаштування">
-<!ENTITY Ctr_altoptionsd	"default appearance">
+<!ENTITY Ctr_altoptionsd	"Типовий вигляд">
 <!ENTITY Ctr_altoptionsp	"Альтернативний вигляд">
 <!ENTITY Ctr_altoptionsw	"Відкрити сторінку налаштувань у новому вікні">
-<!ENTITY Ctr_altoptionsww	"Width">
-<!ENTITY Ctr_altoptionswh	"Height">
-<!ENTITY Ctr_altoptionsi	"The simulated options window is not a dialog anymore but a 'browser window' with all toolbars hidden. The 'Use Current Page' feature only adds urls of pages opened in the current window, which is only 'about:preferences' in this case. The 'options' toolbar button gets replaced by a new one to be able to open options in a window.">
-<!ENTITY Ctr_options_rem	"Remember last selected category">
+<!ENTITY Ctr_altoptionsww	"Ширина">
+<!ENTITY Ctr_altoptionswh	"Висота">
+<!ENTITY Ctr_altoptionsi	"Вікно змодельованих параметрів не є більше діалогом, але "вікно браузера" з усіма панелями інструментів приховані. Функція "Використовувати поточну сторінку" тільки додає URL-адреси сторінок, відкритих в поточному вікні, які є тільки «about:preferences» в цьому випадку. Кнопка "Параметри" панелі інструментів замінюється на нову, щоб бути в змозі відкрити параметри у вікні.">
+<!ENTITY Ctr_options_rem	"Пам’ятати останню обрану категорію">
 <!ENTITY Ctr_svgfilters		"SVG кольори для типових іконок кнопок панелі інструментів">
 <!ENTITY Ctr_wincontrols	"Рухоме управління повноекранним режимом">
 <!ENTITY Ctr_oldtoplevimg	"Зображення «домену верхнього рівня»: класичний вигляд">
@@ -215,19 +215,19 @@
 <!ENTITY Ctr_hideurlgo		"Приховати кнопку «Перейти»">
 <!ENTITY Ctr_hideurlsrg		"Приховати розділювачі та пробіли кнопок «перезавантажити, зупинити та перейти»">
 <!ENTITY Ctr_urlbardropm	"Перемістити маркер-трикутник в кінець рядку адреси">
-<!ENTITY Ctr_altreaderico	"Alternative 'Reader' icons">
+<!ENTITY Ctr_altreaderico	"Альтернативні іконки «Читача»">
 <!ENTITY Ctr_hideprbutton	"Приховати інфо кнопку «спливаюче вікно блоковано»">
 <!ENTITY Ctr_urlbar_ib		"Індикатори справжності панелі рядку адреси">
-<!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
-<!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
-<!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
+<!ENTITY Ctr_ib_nohovcolor	"Не показувати сірий колір при наведенні миші">
+<!ENTITY Ctr_ib_graycolor	"Сірий колір для неопізнаних та «жовтих» сторінок">
+<!ENTITY Ctr_verifiedcolors	"Кольори кнопок для перевірених вебсайтів, захищених і незахищених з’єднань">
 <!ENTITY Ctr_faviconurl		"Значок сайту">
 <!ENTITY Ctr_padlock		"Замок">
 <!ENTITY Ctr_padlock_hid	"прихований">
 <!ENTITY Ctr_padlock_def	"типово">
 <!ENTITY Ctr_padlock_cla	"класичний">
 <!ENTITY Ctr_padlock_mod	"сучасний">
-<!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid 'about' pages">
+<!ENTITY Ctr_padlock_ext	"Іконка '&brandShortName;' для дійсних «Про...» сторінок">
 <!ENTITY Ctr_icopageinfo	"Клік на іконку відкриває інформаційне вікно">
 
 <!ENTITY Ctr_menubar_items	"Позиція пунктів меню">
@@ -274,7 +274,7 @@
 <!ENTITY Ctr_bookbarfs		"Панель закладок: у повноекранному режимі">
 <!ENTITY Ctr_nonavbarbg		"Панель навігації: прибрати колір тла">
 <!ENTITY Ctr_nonavbarbg1	"Ця функція на додаткових панелях та інших верхніх панелях пошкоджена іншим додатком.">
-<!ENTITY Ctr_nonavbarbg2	"Всі панелі Slim Chrome додатку 'Beyond Australis' пошкоджено.">
+<!ENTITY Ctr_nonavbarbg2	"Всі панелі Slim Chrome додатку «Beyond Australis» пошкоджено.">
 <!ENTITY Ctr_nonavborder	"Панель закладок: додати верхню межу для панелі інструментів">
 <!ENTITY Ctr_nonavtbborder	"Верхні панелі інструментів: прибрати межі панелі">
 <!ENTITY Ctr_hidesbclose	"Бокові панелі: приховати кнопку «Закрити» бокової панелі">
