--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -115,17 +115,17 @@
 <!ENTITY Ctr_bf_space		"Zmenšit mezery mezi tlačítky (pokud lze)">
 <!ENTITY Ctr_noconicons		"Nahradit ikony v kontextové nabídce stránky textem (zpět, vpřed, zastavit, obnovit, přidat do záložek)">
 <!ENTITY Ctr_prefpage		"Stránka nastavení">
-<!ENTITY Ctr_altoptionsd	"Default appearance">
+<!ENTITY Ctr_altoptionsd	"Výchozí vzhled">
 <!ENTITY Ctr_altoptionsp	"Alternativní vzhled">
 <!ENTITY Ctr_altoptionsw	"Otevřít stránku nastavení v okně">
-<!ENTITY Ctr_altoptionsww	"Width">
-<!ENTITY Ctr_altoptionswh	"Height">
-<!ENTITY Ctr_altoptionsi	"The simulated options window is not a dialog anymore but a 'browser window' with all toolbars hidden. The 'Use Current Page' feature only adds urls of pages opened in the current window, which is only 'about:preferences' in this case. The 'options' toolbar button gets replaced by a new one to be able to open options in a window.">
-<!ENTITY Ctr_options_rem	"Remember last selected category">
+<!ENTITY Ctr_altoptionsww	"Šířka">
+<!ENTITY Ctr_altoptionswh	"Výška">
+<!ENTITY Ctr_altoptionsi	"V simulaci nastavení už není dialogové okno, ale 'okno prohlížeče' s lištami je skryto. Volba 'Použít stávající stránku' přidávající URL stránek, otevřených v současném okně, je dostupná přes 'about:preferences'. Tlačítko 'Možnosti' je nahrazeno novým, aby bylo možné otevírat možnosti v okně.">
+<!ENTITY Ctr_options_rem	"Pamatovat poslední zvolenou kategorii">
 <!ENTITY Ctr_svgfilters		"SVG barvy pro defaultní ikony tlačítek lišty">
 <!ENTITY Ctr_wincontrols	"Přesunutelné ovládací prvky okna v režimu celé obrazovky">
-<!ENTITY Ctr_oldtoplevimg	"'Top level domain' images: classic appearance">
-<!ENTITY Ctr_altalertbox	"'Alert box': alternative appearance">
+<!ENTITY Ctr_oldtoplevimg	"'Top level domain' obrázků: klasický vzhled">
+<!ENTITY Ctr_altalertbox	"'Alert box': alternativní vzhled">
 <!ENTITY Ctr_emptyfavicon2	"Nahradit obecnou faviconu (prázdnou tečkovanou) faviconou listu">
 <!ENTITY Ctr_mstatusbar		"Přesunutelný stavový řádek">
 <!ENTITY Ctr_mstatusbars4e	"Stavový řádek je nastaven pomocí rozšíření 'Status-4-Evar'">
@@ -215,19 +215,19 @@
 <!ENTITY Ctr_hideurlgo		"Skrýt tlačítko 'přejít'">
 <!ENTITY Ctr_hideurlsrg		"Skrýt tlačítka 'obnovit, zastavit &amp; přejít' oddělovače &amp; mezery">
 <!ENTITY Ctr_urlbardropm	"Přesunout rozevírací šipku na konec řádku">
-<!ENTITY Ctr_altreaderico	"Alternative 'Reader' icons">
+<!ENTITY Ctr_altreaderico	"Alternativní ikona 'Readeru'">
 <!ENTITY Ctr_hideprbutton	"Nezobrazovat upozornění při blokování vyskakovacích oken">
 <!ENTITY Ctr_urlbar_ib		"Tlačítko identity webu (identity box)">
-<!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
-<!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
-<!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
+<!ENTITY Ctr_ib_nohovcolor	"Nezobrazovat šedou barvu při přejetí myší">
+<!ENTITY Ctr_ib_graycolor	"Šedá barva pro neznámou identitu a stránky chrome">
+<!ENTITY Ctr_verifiedcolors	"Barvy tlačítka pro ověřené stránky, zabezpečené a nezabezpečené připojení">
 <!ENTITY Ctr_faviconurl		"Favicona">
 <!ENTITY Ctr_padlock		"Zámek">
 <!ENTITY Ctr_padlock_hid	"skrytý">
 <!ENTITY Ctr_padlock_def	"výchozí">
 <!ENTITY Ctr_padlock_cla	"klasický">
 <!ENTITY Ctr_padlock_mod	"moderní">
-<!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid chrome pages">
+<!ENTITY Ctr_padlock_ext	"'&brandShortName;' ikona pro validní chrome stránky">
 <!ENTITY Ctr_icopageinfo	"Klik na ikonu otevře okno 'informace o stránce'">
 
 <!ENTITY Ctr_menubar_items	"Umístění menu">
