--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -120,7 +120,7 @@
 <!ENTITY Ctr_altoptionsw	"Відкрити сторінку налаштувань у новому вікні">
 <!ENTITY Ctr_altoptionsww	"Ширина">
 <!ENTITY Ctr_altoptionswh	"Висота">
-<!ENTITY Ctr_altoptionsi	"Вікно змодельованих параметрів не є більше діалогом, але "вікно браузера" з усіма панелями інструментів приховані. Функція "Використовувати поточну сторінку" тільки додає URL-адреси сторінок, відкритих в поточному вікні, які є тільки «about:preferences» в цьому випадку. Кнопка "Параметри" панелі інструментів замінюється на нову, щоб бути в змозі відкрити параметри у вікні.">
+<!ENTITY Ctr_altoptionsi	"Вікно змодельованих параметрів не є більше діалогом, але 'вікно браузера' з усіма панелями інструментів приховані. Функція 'Використовувати поточну сторінку' тільки додає URL-адреси сторінок, відкритих в поточному вікні, які є тільки «about:preferences» в цьому випадку. Кнопка 'Параметри' панелі інструментів замінюється на нову, щоб бути в змозі відкрити параметри у вікні.">
 <!ENTITY Ctr_options_rem	"Пам’ятати останню обрану категорію">
 <!ENTITY Ctr_svgfilters		"SVG кольори для типових іконок кнопок панелі інструментів">
 <!ENTITY Ctr_wincontrols	"Рухоме управління повноекранним режимом">
