--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -217,6 +217,7 @@
 <!ENTITY Ctr_urlbardropm	"Verschiebe die 'Schaltfläche' ans Ende der Adressleiste">
 <!ENTITY Ctr_altreaderico	"Alternative Symbole für die 'Lese-Modus'-Schaltfläche">
 <!ENTITY Ctr_hideprbutton	"Verstecke 'Infosymbol' (wenn ein Popup-Fenster blockiert wurde)">
+<!ENTITY Ctr_locsearchbw10	"Höhe der Adress- und Suchleiste reduzieren (experimentell)">
 <!ENTITY Ctr_urlbar_ib		"Schaltfläche zur Webseitenidentität">
 <!ENTITY Ctr_ib_nohovcolor	"Graue Farbe beim 'Hovern' nicht anzeigen">
 <!ENTITY Ctr_ib_graycolor	"Graue Farbe für 'Chrome' Seiten und Seiten mit unbekannter Identität">
