--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -217,6 +217,7 @@
 <!ENTITY Ctr_urlbardropm	"Mover flecha de despliegue al final de la barra de URL">
 <!ENTITY Ctr_altreaderico	"Iconos de 'Vista de lectura' alternativos">
 <!ENTITY Ctr_hideprbutton	"Ocultar icono de notificación cuando se bloquee una ventana emergente">
+<!ENTITY Ctr_locsearchbw10	"Reduce location bars and search bars height (experimental)">
 <!ENTITY Ctr_urlbar_ib		"Botón de identidad del sitio (recuadro de identidad)">
 <!ENTITY Ctr_ib_nohovcolor	"No mostrar color gris al señalarlo">
 <!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
