--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -217,6 +217,7 @@
 <!ENTITY Ctr_urlbardropm	"Перемістити маркер-трикутник в кінець рядку адреси">
 <!ENTITY Ctr_altreaderico	"Альтернативні іконки «Читача»">
 <!ENTITY Ctr_hideprbutton	"Приховати інфо кнопку «спливаюче вікно блоковано»">
+<!ENTITY Ctr_locsearchbw10	"Reduce location bars and search bars height (experimental)">
 <!ENTITY Ctr_urlbar_ib		"Індикатори справжності панелі рядку адреси">
 <!ENTITY Ctr_ib_nohovcolor	"Не показувати сірий колір при наведенні миші">
 <!ENTITY Ctr_ib_graycolor	"Сірий колір для неопізнаних та «жовтих» сторінок">
