--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -217,10 +217,10 @@
 <!ENTITY Ctr_urlbardropm	"下拉控件移动到地址栏尾部">
 <!ENTITY Ctr_altreaderico	"备选的 “阅读模式” 图标">
 <!ENTITY Ctr_hideprbutton	"当弹出窗口被阻止时隐藏通知图标">
-<!ENTITY Ctr_locsearchbw10	"Reduce location bars and search bars height (experimental)">
+<!ENTITY Ctr_locsearchbw10	"减小地址栏与搜索栏高度(实验性)">
 <!ENTITY Ctr_urlbar_ib		"网站身份标识按钮 (身份标识框)">
 <!ENTITY Ctr_ib_nohovcolor	"鼠标悬停时不显示灰色">
-<!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
+<!ENTITY Ctr_ib_graycolor	"未知网站标识与Chrome页面显示灰色">
 <!ENTITY Ctr_verifiedcolors	"已验证站点，安全站点和不安全站点显示不同颜色按钮">
 <!ENTITY Ctr_faviconurl		"网站图标：当前网站图标">
 <!ENTITY Ctr_padlock		"加密连接锁图标">
@@ -228,7 +228,7 @@
 <!ENTITY Ctr_padlock_def	"默认">
 <!ENTITY Ctr_padlock_cla	"经典">
 <!ENTITY Ctr_padlock_mod	"现代">
-<!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid 'about' pages">
+<!ENTITY Ctr_padlock_ext	"合法的 'about' 页面显示 '&brandShortName;' 图标">
 <!ENTITY Ctr_icopageinfo	"点击图标打开“页面信息”窗口">
 
 <!ENTITY Ctr_menubar_items	"菜单项目位置">
